# TYPICAL_TEST_SOURCES      : all *.cc files of typical test
# TYPICAL_TEST_DEFINITIONS  : compile definition of typical test
# TYPICAL_TEST_INC_DIRS     : include directories of typical test
# TYPICAL_TEST_LINK_LIBS    : link libraries of typical test
get_target_property(TYPICAL_TEST_SOURCES homescreen SOURCES)
list(FILTER TYPICAL_TEST_SOURCES EXCLUDE REGEX ".*main\.cc" )
list(TRANSFORM TYPICAL_TEST_SOURCES PREPEND ${PROJECT_SOURCE_DIR}/shell/)
# If TYPICLA_TEST_DEFINITIONS is set to the same as the homescreen build, it will change depending on the cmake arguments. 
# When tweaking TYPICLA_TEST_DEFINITIONS in CMakeLists.txt for each test case, it is better to always set TYPICLA_TEST_DEFINITIONS the same.
# Therefore, TYPICLA_TEST_DEFINITIONS is set one by one withoud includeing options.cmake and plugins.cmake.
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_XDG_CLIENT)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_AGL_CLIENT)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_IVI_SHELL_CLIENT)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_DART_VM_LOGGING)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_DLT)
list(APPEND TYPICAL_TEST_DEFINITIONS BUILD_BACKEND_WAYLAND_EGL)
list(APPEND TYPICAL_TEST_DEFINITIONS BUILD_EGL_ENABLE_TRANSPARENCY)
list(APPEND TYPICAL_TEST_DEFINITIONS BUILD_BACKEND_WAYLAND_VULKAN)
#list(APPEND TYPICAL_TEST_DEFINITIONS BUILD_BACKEND_WAYLAND_DRM)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_ISOLATE)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_RESTORATION)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_PLATFORM)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_MOUSE_CURSOR)
#list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_GSTREAMER_EGL)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_TEXT_INPUT)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_KEY_EVENT)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_URL_LAUNCHER)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_PACKAGE_INFO)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_COMP_SURF)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_COMP_REGION)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_OPENGL_TEXTURE)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_NAVIGATION)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_ACCESSIBILITY)
#list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_PLATFORM_VIEWS)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_DESKTOP_WINDOW)
#list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_PLUGIN_SECURE_STORAGE)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_TEXTURE_EGL)
list(APPEND TYPICAL_TEST_DEFINITIONS ENABLE_TEXTURE_NAVI_RENDER_EGL)
list(APPEND TYPICAL_TEST_DEFINITIONS HAVE_STRCHRNUL)
list(APPEND TYPICAL_TEST_DEFINITIONS EGL_NO_X11)
list(APPEND TYPICAL_TEST_DEFINITIONS MESA_EGL_NO_X11_HEADERS)
list(APPEND TYPICAL_TEST_DEFINITIONS LINUX)
list(APPEND TYPICAL_TEST_DEFINITIONS HAVE_MEMFD_CREATE)
list(APPEND TYPICAL_TEST_DEFINITIONS PATH_PREFIX="${CMAKE_INSTALL_PREFIX}")
list(APPEND TYPICAL_TEST_DEFINITIONS WL_EGL_PLATFORM)
list(APPEND TYPICAL_TEST_DEFINITIONS FILAMENT_SUPPORTS_WAYLAND)

get_target_property(TYPICAL_TEST_INC_DIRS homescreen INCLUDE_DIRECTORIES)
list(APPEND TYPICAL_TEST_INC_DIRS ${CMAKE_BINARY_DIR}/shell)
get_target_property(TYPICAL_TEST_LINK_LIBS homescreen LINK_LIBRARIES)
set(CMAKE_THREAD_PREFER_PTHREAD ON)
include(FindThreads)

add_subdirectory(template-test-case)
add_subdirectory(utils-test)
add_subdirectory(flutter_view-test)
